--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatlibe" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relogio Digital</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="RelogioDigital/assets/css/style.css">
 </head>
 <body>
     <div class="relogio">
@@ -24,6 +24,6 @@
         </div>
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="RelogioDigital/js/script.js"></script>
 </body>
 </html>
